# gimbal-regression

./: .gitignore  .gitignorey  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: benchmark.py  meuse.ipynb
src/grpy/: __init__.py  diagnostics.py  model.py  neighbors.py  plotting.py  solver.py  utils.py  weights.py
tests/: test_diagnostics.py  test_model.py  test_neighbors.py  test_plotting.py  test_solver.py  test_utils.py  test_weights.py
